SteveHorses OLD/Steve PRO OLD/logs/run_20250831_152456.log
  File "/Users/stephenjerome/Desktop/SteveHorsesPro/steve_horses_pro.py", line 391
    ('' if r['edge'] is None else f'{100*r['edge']:0.1f}%')
                                            ^
SyntaxError: f-string: f-string: unmatched '['
